crates/aranya-policy-compiler/tests/data/commands/recall_or_recall_invalid_context.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: unknown error
  |
9 |         check true or recall foo()
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ The `or recall` clause is only valid in command `policy`.
